--- a/src/components/ImageCarousel/ImageCarousel.css
+++ b/src/components/ImageCarousel/ImageCarousel.css
@@ -66,6 +66,8 @@
   padding: 0 40px;
   box-sizing: border-box;
   text-align: left;
+  border-bottom: 1px solid rgba(240, 240, 240, 0.4);
+  padding-bottom: 20px;
 }
 
 .carousel-image-overlay {
@@ -137,6 +139,7 @@
     font-size: 1.3rem;
     max-width: 1000px;
     padding: 0 80px;
+    padding-bottom: 30px;
   }
   .carousel-image-overlay {
     font-size: 8rem;
@@ -164,6 +167,9 @@
     min-width: 100vw;
     max-width: 100vw;
     padding: 0;
+  }
+  .carousel-caption {
+    padding-bottom: 15px;
   }
   .carousel-next-button {
     right: 10px;
