--- a/src/components/QuemSomosSection/QuemSomosSection.css
+++ b/src/components/QuemSomosSection/QuemSomosSection.css
@@ -23,11 +23,12 @@
   height: 90px;
   border-bottom: 2px solid #3A4C3A;
   position: relative;
+  justify-content: center;
 }
 
 .quem-somos-main-text {
   font-family: 'Montserrat', 'Montserrat ExtraBold', sans-serif;
-  font-size: 6.8rem;
+  font-size: 4.2rem;
   font-weight: 900;
   color: #F0F0C0;
   letter-spacing: -0.04em;
@@ -113,6 +114,7 @@
   .quem-somos-title-container {
     height: 60px;
     padding: 0 10px 0 10px;
+    justify-content: center;
   }
   .quem-somos-main-text {
     font-size: 4.0rem;
